Prevent flickering when dark-mode loading

--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -236,6 +236,10 @@ twitter-widget, video
     color #eee
 
 .navbar-items
+  #mode-switch
+    width 46px
+
+.navbar-items
   float right
   margin 0
   list-style none
